# lab-tracker

./: .env_template  .gitignore  Makefile  README.md  main.py  pyproject.toml
notebooks/: compare_values.ipynb
src/: config.py  database.py  delete_tables.sql  insert_labs.sql  models.py  schema.sql
src/parsers/: base_parser.py  dcbled_parser.py  synlab_parser.py  utils.py  zdl_parser.py
